# craps_simulator

./: .gitignore  .ignore  PHASE1_BRIEF.md  PHASE2_BRIEF.md  README.md  check_craps_project.ps1  combined_files.txt  config.py  dashboard.py  diagram.puml  dump_py.py  generate-project-tree.ps1  main.py  mypy.ini  old_main.py  pyproject.toml  rules.py  run_session.py  run_simulation.py  setup.py  simulation_utils.py  start_server.ps1
craps/: base_strategy.py  bet.py  bet_adjusters.py  bet_factory.py  betting_strategy.py  common.py  consumers.py  craps_engine.py  dice.py  edge.py  events.py  game_state.py  high_roller.py  house_rules.py  lineup.py  log_manager.py  play_by_play.py  player.py  player_setup.py  puck.py  replay_single_session.py  roll_history_manager.py  rules.py  rules_engine.py  serialization.py  session_initializer.py  session_manager.py  session_recorder.py  shooter.py  simulation_manager.py  simulation_report.py  simulation_runner.py  single_session.py  statistics.py  statistics_report.py  strategy_contract.py  table.py  table_runner.py  view_log.py  visualizer.py
craps_simulator.egg-info/: PKG-INFO  SOURCES.txt
output/: SM_statistics_report.txt  combined_files.txt  play_by_play.html  play_by_play.txt  session_manager_play_by_play.txt  session_mgr_play_by_play.txt  single_session_play_by_play.txt  single_session_roll_history.csv  single_session_roll_history.json  statistics_report.txt
prototype/: README.md  craps_observatory.jsx  parametric-felt.html
saves/: great_session_roll_histor.json
scripts/: verify_replay.py
tests/: run_quiet_test.py  (+31 more)
(+183 files in other folders)
