[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "craps_simulator"
version = "0.1"
description = "Craps simulation engine for testing betting strategies at scale"
requires-python = ">=3.11"
dependencies = [
    "colorama==0.4.6",
    "fastapi==0.139.0",
    "matplotlib==3.11.0",
    "psutil==7.2.2",
    "pydantic==2.13.4",
    "tqdm==4.68.3",
    "uvicorn==0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "mypy==2.1.0",
    "httpx==0.28.1",
    "types-colorama==0.4.15.20260508",
    "types-tqdm==4.68.0.20260608",
]

[tool.setuptools.packages.find]
include = ["craps*"]

[tool.pytest.ini_options]
markers = [
    "convergence: ~1M-roll house-edge convergence checks (excluded from the default run; use -m convergence)",
]
addopts = "-m \"not convergence\""
